--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma, sans-serif; margin:0; background:#f9f9f9; }
+body { font-family: Tahoma, sans-serif; margin:0; background:#f3e5ff; }
 
 /* الهيدر */
 header {
@@ -19,28 +19,49 @@ header {
   top: 0;
   z-index: 1000;
 }
+
+/* زر السلة فوق */
+#cartBtn {
+  background: #8a2be2;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 10px;
+  position: relative;
+}
+#cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* أزرار الهيدر الأخرى */
 .header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
 .header-buttons button {
-  background: #ffd814;
-  border: 1px solid #fcd200;
-  padding: 6px 12px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-}
-.header-buttons button:hover { background: #f7ca00; }
-
-/* زر الجرس */
-#notifBtn {
-  position: relative;
-  background: #ff4444;
-  border: 1px solid #cc0000;
+  background: #8a2be2;
+  border: none;
   padding: 6px 12px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
   color: #fff;
+  transition: 0.3s;
 }
+.header-buttons button:hover { background: #6a1fbf; }
+
+/* زر الجرس */
+#notifBtn { position: relative; }
 #notif-count {
   position: absolute;
   top: -8px;
@@ -65,20 +86,6 @@ header {
   font-weight: bold;
 }
 
-/* عداد السلة */
-#cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
 /* مربع البحث */
 #searchBox {
   display: block;
@@ -92,55 +99,43 @@ header {
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
 }
 
-/* 🔥 المنتجات بشكل كروت زي أمازون */
+/* المنتجات */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
   gap: 12px;
   padding: 15px;
 }
 .product {
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
   text-align: center;
-  padding: 15px 10px;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   transition: 0.3s;
 }
-.product:hover {
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  transform: scale(1.02);
-}
+.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
 .product img {
   width: 100%;
   height: 120px;
   object-fit: contain;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
-.product .name {
-  font-size: 15px;
+.name { font-size: 16px; margin: 5px 0; color: #333; }
+.price { font-weight: bold; margin-bottom: 5px; }
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
+.product button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
   font-weight: bold;
-  color: #222;
-  margin: 5px 0;
+  transition: 0.3s;
 }
-.product .price {
-  font-size: 14px;
-  color: #8a2be2;
-  font-weight: bold;
-}
-
-/* 📱 على الموبايل: عمودين */
-@media (max-width: 600px) {
-  #products-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-/* 💻 على الشاشات الكبيرة: 4 أعمدة */
-@media (min-width: 1024px) {
-  #products-container {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
 /* نافذة اجمالي الفاتورة */
 #totalModal {
@@ -218,8 +213,10 @@ header {
 
 <header>
   📦 جميع منتجات جنة
-  <div class="header-buttons">
+  <div style="text-align:center;">
     <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+  </div>
+  <div class="header-buttons">
     <button id="totalBtn">💰 إجمالي الفاتورة</button>
     <button id="supportBtn">☎️ الدعم الفني</button>
     <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
@@ -231,6 +228,158 @@ header {
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
 <div id="products-container"></div>
 
-<!-- باقي الأكواد (السلة + الواتس + سكربت المنتجات) زي ما عندك بدون تغيير -->
+<div id="totalModal">
+  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+  <div id="cartList"></div>
+  <button id="sendBtn">📤 إرسال عبر واتساب</button>
+  <button onclick="closeTotalModal()">❌ إغلاق</button>
+  <div id="orderNumbers" style="margin-top:10px; display:none;">
+    <p>اختر رقم لإرسال الطلب 👇</p>
+    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+  </div>
+</div>
+
+<div id="toast">تمت الإضافة إلى السلة</div>
+
+<script defer>
+const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
+const container = document.getElementById("products-container");
+let productsData = [];
+let cart = [];
+
+// عرض المنتجات
+function renderProducts(data){
+  let html = "";
+  for(let i=0;i<data.length;i++){
+      const item = data[i];
+      html += `<div class="product">
+                  <img src="${item.image || 'https://via.placeholder.com/150'}">
+                  <div class="name">${item.name}</div>
+                  <div class="price">السعر: ${item.price} جنيه</div>
+                  <input type="number" min="1" value="1" data-index="${i}">
+                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
+               </div>`;
+  }
+  container.innerHTML = html;
+}
+
+// تحميل سريع للمنتجات
+(async function(){
+   if(localStorage.getItem("products")){
+      productsData = JSON.parse(localStorage.getItem("products"));
+      renderProducts(productsData);
+   }
+   try {
+     const res = await fetch(SCRIPT_PRODUCTS_URL, {cache:"no-store"});
+     const data = await res.json();
+     productsData = data.reverse();
+     localStorage.setItem("products", JSON.stringify(productsData));
+     renderProducts(productsData);
+     setTimeout(checkNewProducts, 1500);
+   } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
+})();
+
+function showToast(msg){
+  const toast = document.getElementById("toast");
+  toast.innerText = msg;
+  toast.style.display = "block";
+  setTimeout(()=>toast.style.display="none",1200);
+}
+
+function updateCartCount(){
+  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const badge = document.getElementById("cart-count");
+  badge.style.display = count>0?"inline-block":"none";
+  badge.innerText = count;
+}
+
+function addToCart(index){
+  const input = container.querySelector(`input[data-index='${index}']`);
+  const quantity = parseInt(input.value);
+  if(quantity<=0) return;
+  cart[index] = (cart[index] || 0) + quantity;
+  updateCartCount();
+  showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
+}
+
+function showTotal(){
+  let total=0;
+  const cartList=document.getElementById("cartList");
+  cartList.innerHTML="";
+  cart.forEach((qty,idx)=>{
+    if(qty){
+      total+=qty*productsData[idx].price;
+      const div=document.createElement("div");
+      div.className="cart-item";
+      div.innerHTML=`<span>${productsData[idx].name}</span>
+                     <span>السعر: ${productsData[idx].price} × 
+                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${productsData[idx].price*qty}</strong> جنيه</span>
+                     <button onclick="removeItem(${idx})">حذف</button>`;
+      cartList.appendChild(div);
+    }
+  });
+  document.getElementById("totalAmount").innerText=total;
+  document.getElementById("totalModal").style.display="block";
+}
+
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
+function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
+function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
+
+// دالة إرسال الطلب بالشكل المطلوب
+document.getElementById("sendBtn").onclick = function(){
+  const orderDiv = document.getElementById("orderNumbers");
+  orderDiv.style.display="block";
+  orderDiv.querySelectorAll("a").forEach(a=>{
+    a.onclick=(e)=>{
+      e.preventDefault();
+      let text="🧾 *طلبية جديدة* %0A%0A";
+      text+=`📦 المنتج | 🔢 الكمية | 💵 السعر | 📊 الإجمالي%0A`;
+      text+=`--------------------------------%0A`;
+      let total=0;
+      cart.forEach((qty, idx)=>{
+        if(qty){
+          const price=productsData[idx].price;
+          const lineTotal=qty*price;
+          total+=lineTotal;
+          text+=`${productsData[idx].name} | ${qty} | ${price}ج | ${lineTotal}ج%0A`;
+        }
+      });
+      text+=`--------------------------------%0A`;
+      text+=`✅ *المجموع الكلي:* *${total} جنيه*`;
+      window.open(`${a.href}?text=${text}`,"_blank");
+    }
+  });
+}
+
+// أزرار الهيدر
+document.getElementById("cartBtn").onclick=showTotal;
+document.getElementById("totalBtn").onclick=showTotal;
+document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
+
+// إشعارات المنتجات الجديدة
+function checkNewProducts(){
+  const today=(new Date()).toISOString().split("T")[0];
+  let newCount=0;
+  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
+  if(newCount>0){
+    document.getElementById("notif-count").innerText=newCount;
+    document.getElementById("notif-count").style.display="inline-block";
+    document.getElementById("newBanner").style.display="block";
+    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
+    if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
+    else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
+  }
+}
+
+// البحث
+document.getElementById("searchBox").addEventListener("input", function(){
+  const keyword=this.value.trim().toLowerCase();
+  const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
+  renderProducts(filtered);
+});
+</script>
 </body>
 </html>
