--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma, sans-serif; margin:0; background:#f3e5ff; }
+body { font-family: Tahoma,sans-serif; margin:0; background:#f3e5ff; }
 
 /* الهيدر */
 header {
@@ -102,8 +102,8 @@ header {
 /* المنتجات */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 12px;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 15px;
   padding: 15px;
 }
 .product {
@@ -118,7 +118,7 @@ header {
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
 .product img {
   width: 100%;
-  height: 120px;
+  height: 130px;
   object-fit: contain;
   margin-bottom: 8px;
 }
@@ -137,7 +137,7 @@ header {
 }
 .product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
-/* نافذة اجمالي الفاتورة */
+/* نافذة إجمالي الفاتورة */
 #totalModal {
   display: none;
   position: fixed;
@@ -149,9 +149,9 @@ header {
   box-shadow: 0 3px 15px rgba(0,0,0,0.3);
   text-align: center;
   z-index: 1002;
-  width: 90%;
-  max-width: 400px;
-  max-height: 80%;
+  width: 95%;
+  max-width: 500px;
+  max-height: 85%;
   overflow-y: auto;
 }
 #totalModal h2 {
@@ -180,8 +180,9 @@ header {
   align-items: center;
   border-bottom: 1px solid #ccc;
   padding: 5px 0;
+  flex-wrap: wrap;
 }
-.cart-item span { margin: 0 5px; }
+.cart-item span { margin: 0 5px; min-width: 60px; word-break: break-word; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
 
 /* الأرقام تحت بعض */
@@ -206,6 +207,12 @@ header {
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
   display: none;
   z-index: 1003;
+}
+
+/* تحسين الموبايل */
+@media (max-width: 600px){
+  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
+  .product img { height: 100px; }
 }
 </style>
 </head>
@@ -310,12 +317,15 @@ function showTotal(){
   cartList.innerHTML="";
   cart.forEach((qty,idx)=>{
     if(qty){
-      total+=qty*productsData[idx].price;
+      const price = productsData[idx].price;
+      const lineTotal = qty*price;
+      total+=lineTotal;
       const div=document.createElement("div");
       div.className="cart-item";
       div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>السعر: ${productsData[idx].price} × 
-                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${productsData[idx].price*qty}</strong> جنيه</span>
+                     <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
+                     <span>السعر: ${price} ج</span>
+                     <span>الإجمالي: <strong>${lineTotal}</strong> ج</span>
                      <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
@@ -335,51 +345,4 @@ document.getElementById("sendBtn").onclick = function(){
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 *طلبية جديدة* %0A%0A";
-      text+=`📦 المنتج | 🔢 الكمية | 💵 السعر | 📊 الإجمالي%0A`;
-      text+=`--------------------------------%0A`;
-      let total=0;
-      cart.forEach((qty, idx)=>{
-        if(qty){
-          const price=productsData[idx].price;
-          const lineTotal=qty*price;
-          total+=lineTotal;
-          text+=`${productsData[idx].name} | ${qty} | ${price}ج | ${lineTotal}ج%0A`;
-        }
-      });
-      text+=`--------------------------------%0A`;
-      text+=`✅ *المجموع الكلي:* *${total} جنيه*`;
-      window.open(`${a.href}?text=${text}`,"_blank");
-    }
-  });
-}
-
-// أزرار الهيدر
-document.getElementById("cartBtn").onclick=showTotal;
-document.getElementById("totalBtn").onclick=showTotal;
-document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
-
-// إشعارات المنتجات الجديدة
-function checkNewProducts(){
-  const today=(new Date()).toISOString().split("T")[0];
-  let newCount=0;
-  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
-  if(newCount>0){
-    document.getElementById("notif-count").innerText=newCount;
-    document.getElementById("notif-count").style.display="inline-block";
-    document.getElementById("newBanner").style.display="block";
-    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
-    if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
-    else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
-  }
-}
-
-// البحث
-document.getElementById("searchBox").addEventListener("input", function(){
-  const keyword=this.value.trim().toLowerCase();
-  const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
-  renderProducts(filtered);
-});
-</script>
-</body>
-</html>
+      let text="
